.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_InvoiceItem__c.object
<CustomObject>
    <description>Represents invoice detail and reference to other objects.  The invoice item should be a running record of the invoice.  The initial set of data will be the initial detail of the invoice.</description>
    <fields>
        <fullName>CC_Order_Shipment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Order Shipment Item</label>
        <referenceTo>ccrz__E_OrderShipmentItem__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CC_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOCIS__c</fullName>
        <description>ARC GL Account</description>
        <label>FOCIS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CC_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CC_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Unit Price (Original Amount) * Quantity</description>
        <formula>ccrz__OriginalAmount__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original Amount * Quantity</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specific order item to which this invoice applies (optional)</description>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CCInvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order to which this invoice item applies (optional)</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>CCInvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Comments about this line item.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__InvoiceItemId__c</fullName>
        <description>External identifier.</description>
        <externalId>true</externalId>
        <label>Invoice Item Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Invoice__c</fullName>
        <description>The invoice this item is a child of</description>
        <label>Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>CC Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalAmount__c</fullName>
        <description>The original amount of the invoice item. Once set this should not be changed. Could be negative or positive.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Display order sequence for the item.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <description>E.g. Open, Closed.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <description>E.g. Detail, Comment, Payment.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Invoice Item</label>
    <nameField>
        <displayFormat>II-{0000000000}</displayFormat>
        <label>CC Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>